feat: Add reward system and holidays

--- a/Habit_Tracker/index.html
+++ b/Habit_Tracker/index.html
@@ -63,6 +63,10 @@
         </div>
     </div>
 
+    <div id="celebration-overlay">
+        <div class="cheer-text">Excellent! 🎉</div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
